lib/tests/fixtures/compiler/parser/next_in_defined_type.baseline
Error: next_in_defined_type.pp:3:9: next statement cannot be used inside a defined type.
  next
  ^~~~
