lib/tests/fixtures/compiler/parser/next_in_defined_type.pp
define foo() {
    if true {
        next
    }
}
